# Generated by Django 5.2.11 on 2026-02-11 12:17

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='ListeningTest',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.CharField(max_length=255)),
                ('version_id', models.CharField(blank=True, max_length=64)),
                ('total_items', models.PositiveIntegerField(default=0)),
                ('is_active', models.BooleanField(default=True)),
                ('is_archived', models.BooleanField(default=False)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='ListeningSession',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('mode', models.CharField(choices=[('practice', 'Practice'), ('exam', 'Exam')], max_length=20)),
                ('status', models.CharField(choices=[('active', 'Active'), ('finished', 'Finished'), ('abandoned', 'Abandoned')], default='active', max_length=20)),
                ('start_time', models.DateTimeField(auto_now_add=True)),
                ('end_time', models.DateTimeField(blank=True, null=True)),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='listening_sessions', to=settings.AUTH_USER_MODEL)),
                ('test', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='sessions', to='listening.listeningtest')),
            ],
            options={
                'ordering': ['-start_time'],
            },
        ),
        migrations.CreateModel(
            name='AntiCheatEvent',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('event_type', models.CharField(choices=[('focus_loss', 'Focus Loss'), ('replay', 'Replay')], max_length=20)),
                ('occurred_at', models.DateTimeField(auto_now_add=True)),
                ('count', models.PositiveIntegerField(default=1)),
                ('extra_data', models.JSONField(blank=True, default=dict)),
                ('session', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='events', to='listening.listeningsession')),
            ],
            options={
                'ordering': ['occurred_at'],
            },
        ),
        migrations.CreateModel(
            name='ListeningItem',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('audio', models.FileField(blank=True, null=True, upload_to='audio/%Y/%m/')),
                ('audio_url', models.URLField(blank=True, max_length=500)),
                ('difficulty', models.CharField(choices=[('easy', 'Easy'), ('medium', 'Medium'), ('hard', 'Hard')], default='medium', max_length=20)),
                ('topic_tag', models.CharField(blank=True, max_length=100)),
                ('transcript', models.TextField(blank=True)),
                ('item_type', models.CharField(choices=[('lecture', 'Lecture'), ('conversation', 'Conversation')], default='lecture', max_length=20)),
                ('order', models.PositiveIntegerField(default=0)),
                ('test', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='items', to='listening.listeningtest')),
            ],
            options={
                'ordering': ['test', 'order'],
            },
        ),
        migrations.CreateModel(
            name='Question',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('text', models.TextField()),
                ('question_type', models.CharField(choices=[('main_idea', 'Main Idea'), ('detail', 'Detail'), ('inference', 'Inference'), ('organization', 'Organization'), ('pragmatic', 'Pragmatic')], default='detail', max_length=20)),
                ('score_weight', models.PositiveIntegerField(default=1)),
                ('order', models.PositiveIntegerField(default=0)),
                ('explanation', models.TextField(blank=True)),
                ('item', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='questions', to='listening.listeningitem')),
            ],
            options={
                'ordering': ['item', 'order'],
            },
        ),
        migrations.CreateModel(
            name='ChoiceOption',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('label', models.CharField(max_length=2)),
                ('text', models.TextField()),
                ('is_correct', models.BooleanField(default=False)),
                ('order', models.PositiveIntegerField(default=0)),
                ('question', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='options', to='listening.question')),
            ],
            options={
                'ordering': ['question', 'order'],
                'unique_together': {('question', 'label')},
            },
        ),
        migrations.CreateModel(
            name='ScoreReport',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('total_score', models.PositiveIntegerField(default=0)),
                ('main_idea', models.PositiveIntegerField(default=0)),
                ('detail', models.PositiveIntegerField(default=0)),
                ('inference', models.PositiveIntegerField(default=0)),
                ('organization', models.PositiveIntegerField(default=0)),
                ('pragmatic', models.PositiveIntegerField(default=0)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('session', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='score_report', to='listening.listeningsession')),
            ],
            options={
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='UserAnswer',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('is_correct', models.BooleanField(null=True)),
                ('response_time_ms', models.PositiveIntegerField(blank=True, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('question', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='user_answers', to='listening.question')),
                ('selected_option', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='+', to='listening.choiceoption')),
                ('session', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='answers', to='listening.listeningsession')),
            ],
            options={
                'unique_together': {('session', 'question')},
            },
        ),
    ]
